Bug 365381: treat <method><body/></method> XBL as 'function () {}' instead of ignoring it, r+sr=bzbarsky